--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta http-equiv="refresh" content="0; url=https://resilienceindesign.github.io/resilienceindesign.github.io/Resilience_in_Design_2025-web.pdf" />
+<meta http-equiv="refresh" content="0; url=https://resilienceindesign.github.io/Resilience_in_Design_2025-web.pdf" />
 </head>
 <body>
 </body>
