--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang=en>
 <head>
-<meta http-equiv="refresh" content="0; url=https://resilienceindesign.github.io/Resilience_in_Design_2025-web.pdf" />
+    <meta charset="UTF-8">
+    <title>Resilience in Design</title>
+    <meta http-equiv="refresh" content="0; url=Resilience_in_Design_2025-web.pdf" />
 </head>
 <body>
 </body>
